<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DDE5EE">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"
                android:text="@string/personal_info"
                android:padding="15dp"
                android:textColor="#000000"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/teachers_img"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/staffs_position"
                android:textAlignment="center"
                android:textColor="#000000"
                android:layout_centerHorizontal="true"
                android:padding="10dp"/>

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:textColor="#000000"
                android:layout_marginBottom="5dp"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:layout_marginTop="-15dp"
                android:id="@+id/staffs_mobile"
                android:theme="@style/mrjbutton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_centerHorizontal="true" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:id="@+id/staffs_email"
                android:layout_marginTop="-15dp"
                android:theme="@style/mrjbutton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_centerHorizontal="true" />


        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/academic_info"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:textColor="#000000"
                android:id="@+id/s0000"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/staffs_academics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/s0000"
                android:layout_marginTop="5dp"
                android:textColor="#000000"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"/>

        </RelativeLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/research_interest"
                android:layout_marginTop="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:id="@+id/research"
                android:textColor="#000000"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/staffs_research"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/research"
                android:textColor="#000000"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"/>

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/experiences"
                android:layout_marginTop="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:textColor="#000000"
                android:id="@+id/experiences"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/staffs_experiences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/experiences"
                android:textColor="#000000"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/publications"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:textColor="#000000"
                android:id="@+id/publication_text"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/staffs_publications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/publication_text"
                android:layout_marginTop="5dp"
                android:textColor="#000000"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"/>

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/award"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:textColor="#000000"
                android:id="@+id/award_text"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/staffs_award"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/award_text"
                android:layout_marginTop="5dp"
                android:textColor="#000000"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"/>

        </RelativeLayout>
        
    </LinearLayout>


</ScrollView>
